# docs/swagger.json
@@ -1366,6 +1366,55 @@
                 }
             }
         },
+        "/api/v1/payment/init": {
+            "post": {
+                "description": "Initiates a payment process for a given item ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "Initialize payment",
+                "parameters": [
+                    {
+                        "description": "Payment Request",
+                        "name": "paymentRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.PaymentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Payment URL",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body or Payment service error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Payment service error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/profile": {
             "put": {
                 "description": "Allows a user to update their profile information",
@@ -2227,6 +2276,14 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.PaymentRequest": {
+            "type": "object",
+            "properties": {
+                "item_id": {
                     "type": "string"
                 }
             }
